--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 response_time=0.2
-gemini_key=AIzaSyDnRX77J8tYSu1VGeYVpBbMqr0Bze8Dx5A
+gemini_key=<YOUR KEY HERE>
 main_theme=litera
 enc_key=FFs61zxMxAkDEN1B4QRuuMadwyUi2r-a1S4JE9uRVgo=
 font_size=8
