--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 response_time=0.2
 gemini_key=<YOUR KEY HERE>
 main_theme=litera
-enc_key=FFs61zxMxAkDEN1B4QRuuMadwyUi2r-a1S4JE9uRVgo=
+enc_key=<CREATE KEY WITH key_write() - enc01.py>
 font_size=8
 font=MS Sans Serif
 default_font=MS Sans Serif
